# safe-wild-cards

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.haskell-ci  safe-wild-cards.cabal  tame.cabal
.github/workflows/: haskell-ci.yml
src/: SafeWildCards.hs  Tame.hs
test/: Test.hs  TestTypes.hs
