cabal-version: >=1.10

name: safe-wild-cards
version: 1.0.0
synopsis: Use RecordWildCards safely
description:
  Use RecordWildCards safely
license: BSD3
license-file: LICENSE
author: Artyom Kazak
maintainer: Monadfix <hi@monadfix.com>
homepage: https://github.com/monadfix/safe-wild-cards
category: Control
build-type: Simple
extra-source-files:
  CHANGELOG.md
  README.md
tested-with:
  GHC ==8.0.2
  GHC ==8.2.2
  GHC ==8.4.4
  GHC ==8.6.5
  GHC ==8.8.1

source-repository head
  type: git
  location: git@github.com:monadfix/safe-wild-cards.git

library
  exposed-modules:
    SafeWildCards
  build-depends:
    base ==4.*,
    template-haskell ==2.*,
    th-abstraction ==0.3.*
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
